samples/_failures_safe/1761711578_04bf02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b64d3fa3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b64d3fa3.c:192:9: error: expected expression at end of input
  192 |         tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_b64d3fa3.c:192:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b64d3fa3.c:192:9: error: expected declaration or statement at end of input
